RESOLVED FIXED132608
REGRESSION: Animated GIF inside compositing layer never resumes animation when scrolled back into view
https://bugs.webkit.org/show_bug.cgi?id=132608
Summary REGRESSION: Animated GIF inside compositing layer never resumes animation whe...
Antti Koivisto
Reported 2014-05-06 07:01:18 PDT
yep
Attachments
patch (11.70 KB, patch)
2014-05-06 07:08 PDT, Antti Koivisto
simon.fraser: review+
Antti Koivisto
Comment 1 2014-05-06 07:08:26 PDT
Antti Koivisto
Comment 2 2014-05-06 07:11:30 PDT
Simon Fraser (smfr)
Comment 3 2014-05-06 08:29:03 PDT
Comment on attachment 230905 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=230905&action=review > LayoutTests/fast/repaint/animation-after-layer-scroll.html:18 > + hasRepaintRects = window.internals.hasRepaintRectsIncludingSublayers(); Couldn't you have just got the repaint rects in JS and checked their emptiness?
Antti Koivisto
Comment 4 2014-05-06 13:41:42 PDT
(In reply to comment #3) > Couldn't you have just got the repaint rects in JS and checked their emptiness? That's what I tried first. There is currently no API for getting repaint rects except for sublayers and implementing one sensibly would have been more complicated than this.
Antti Koivisto
Comment 5 2014-05-06 13:42:17 PDT
I mean "no API for getting repaint rects for sublayers"
Simon Fraser (smfr)
Comment 6 2014-05-06 14:13:37 PDT
layerTreeAsText(LAYER_TREE_INCLUDES_REPAINT_RECTS)
Antti Koivisto
Comment 7 2014-05-07 06:12:58 PDT
http://trac.webkit.org/changeset/168424 > layerTreeAsText(LAYER_TREE_INCLUDES_REPAINT_RECTS) Ah right. Switched the test case to use that.
Note You need to log in before you can comment on or make changes to this bug.