REGRESSION: Animated GIF inside compositing layer never resumes animation when scrolled back into view https://bugs.webkit.org/show_bug.cgi?id=132608

Reviewed by Simon Fraser.


Source/WebCore:
Test: fast/repaint/animation-after-layer-scroll.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::scrollTo):

    Check if any animations need to be restarted after layer scroll.

LayoutTests:
* fast/repaint/animation-after-layer-scroll-expected.txt: Added.
* fast/repaint/animation-after-layer-scroll.html: Added.



Canonical link: https://commits.webkit.org/150691@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168424 268f45cc-cd09-0410-ab3c-d52691b4dbfc